# Projects_of_PWSkills

./: README.md
ML_Projects/Credit_Card_Fraud_detection/CreditCard/: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
ML_Projects/Credit_Card_Fraud_detection/CreditCard/.github/: ISSUE_TEMPLATE.md
ML_Projects/Credit_Card_Fraud_detection/CreditCard/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ML_Projects/Credit_Card_Fraud_detection/CreditCard/src/CreditCard/: __init__.py  cli.py
ML_Projects/Credit_Card_Fraud_detection/CreditCard/tests/: __init__.py  test_CreditCard.py
ML_Projects/Mod65_LinearReg_Forest_fire/: README.md  application.py
ML_Projects/Mod65_LinearReg_Forest_fire/models/: scaler.pkl
ML_Projects/Mod65_LinearReg_Forest_fire/notebooks/: Mod64_Regression5_L3.ipynb
ML_Projects/Mod65_LinearReg_Forest_fire/templates/: home.html  (+1 more)
ML_Projects/Mod66_LogisticReg_Diabetes_prediction/: README.md  application.py
ML_Projects/Mod77_Diamond_Price_Pred/: README.md  application.py  requirements.txt  setup.py
ML_Projects/Mod77_Diamond_Price_Prediction/: .gitignore  setup.py
ML_Projects/Mod79_Wafer_Fault_Detection/: README.md  app.py  requirements.txt  setup.py
ML_Projects/Mod82_Breast_Cancer_Prediction_Ass/: .gitignore  README.md  application.py  requirements.txt  setup.py
ML_Projects/Mod88_Credit_Card_Fraud_detection/: .gitignore  README.md  application.py  setup.py
ML_Projects/Mod89_Cement_Strength_prediction/: README.md  application.py  setup.py
(+79 files in other folders)
